--- a/hackathon.html
+++ b/hackathon.html
@@ -169,40 +169,40 @@
             <div class="col s12 l6 center">
                 <!--<h4 class="orange-text strong">Event Dates</h4>-->
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="64.000000pt" height="64.000000pt" viewBox="0 0 64.000000 64.000000" preserveAspectRatio="xMidYMid meet">
-<g transform="translate(0.000000,64.000000) scale(0.100000,-0.100000)"
-fill="#ff9800" stroke="none">
-<path d="M120 570 c0 -28 -2 -30 -40 -30 l-40 0 0 -240 0 -240 270 0 270 0 0
-240 0 240 -40 0 c-38 0 -40 2 -40 30 0 27 -3 30 -30 30 -27 0 -30 -3 -30 -30
-0 -29 -1 -30 -50 -30 -49 0 -50 1 -50 30 0 27 -3 30 -30 30 -27 0 -30 -3 -30
--30 0 -29 -1 -30 -50 -30 -49 0 -50 1 -50 30 0 27 -3 30 -30 30 -27 0 -30 -3
--30 -30z m0 -80 c0 -27 3 -30 30 -30 27 0 30 3 30 30 0 29 1 30 50 30 49 0 50
--1 50 -30 0 -27 3 -30 30 -30 27 0 30 3 30 30 0 29 1 30 50 30 49 0 50 -1 50
--30 0 -27 3 -30 30 -30 27 0 30 3 30 31 0 27 3 30 28 27 l27 -3 0 -215 0 -215
--245 0 -245 0 -2 205 c-1 113 0 211 2 218 3 6 16 12 30 12 21 0 25 -5 25 -30z"/>
-<path d="M266 308 c-3 -29 -6 -70 -6 -90 l0 -38 50 0 50 0 0 38 c0 20 -3 61
--6 90 l-7 52 -37 0 -37 0 -7 -52z"/>
-</g>
-</svg>
+                    <g transform="translate(0.000000,64.000000) scale(0.100000,-0.100000)"
+                    fill="#ff9800" stroke="none">
+                    <path d="M120 570 c0 -28 -2 -30 -40 -30 l-40 0 0 -240 0 -240 270 0 270 0 0
+                    240 0 240 -40 0 c-38 0 -40 2 -40 30 0 27 -3 30 -30 30 -27 0 -30 -3 -30 -30
+                    0 -29 -1 -30 -50 -30 -49 0 -50 1 -50 30 0 27 -3 30 -30 30 -27 0 -30 -3 -30
+                    -30 0 -29 -1 -30 -50 -30 -49 0 -50 1 -50 30 0 27 -3 30 -30 30 -27 0 -30 -3
+                    -30 -30z m0 -80 c0 -27 3 -30 30 -30 27 0 30 3 30 30 0 29 1 30 50 30 49 0 50
+                    -1 50 -30 0 -27 3 -30 30 -30 27 0 30 3 30 30 0 29 1 30 50 30 49 0 50 -1 50
+                    -30 0 -27 3 -30 30 -30 27 0 30 3 30 31 0 27 3 30 28 27 l27 -3 0 -215 0 -215
+                    -245 0 -245 0 -2 205 c-1 113 0 211 2 218 3 6 16 12 30 12 21 0 25 -5 25 -30z"/>
+                    <path d="M266 308 c-3 -29 -6 -70 -6 -90 l0 -38 50 0 50 0 0 38 c0 20 -3 61
+                    -6 90 l-7 52 -37 0 -37 0 -7 -52z"/>
+                    </g>
+                </svg>
                 <br><br>
 
                 <div class="divider" id="eventdivider"></div>
-                <p id="dates">Hackathon Registration - <span class="orange-text">5th July - 15th July</span>
-                    <br> Prototype Implementation - <span class="orange-text">16th July - 13th September</span> <br>Project Submission - <span class="orange-text">14th September</span> <br>Project Presentation - <span class="orange-text">17th September - 21st September</span>
+                <p id="dates"><!--Hackathon Registration - <span class="orange-text">5th July - 15th July</span>
+                    <br> Prototype Implementation - <span class="orange-text">16th July - 13th September</span> <br>Project Submission - <span class="orange-text">14th September</span> <br>Project Presentation --> <br>  <span style="font-size: 30px;" class="orange-text">17th <span class="black-text">Sept. </span>- 21st <span class="black-text">Sept. </span></span>
                 </p>
             </div>
             <div class="col s12 l6 center">
                 <!--<h4 class="orange-text strong">Event Venue</h4>-->
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="64.000000pt" height="64.000000pt" viewBox="0 0 64.000000 64.000000" preserveAspectRatio="xMidYMid meet">
-<g transform="translate(0.000000,64.000000) scale(0.100000,-0.100000)"
-fill="#ff9800" stroke="none">
-<path d="M160 467 c-115 -77 -91 -239 65 -441 21 -28 40 -15 94 69 113 173
-121 304 22 371 -49 33 -134 34 -181 1z m168 -32 c40 -33 56 -76 49 -131 -5
--51 -62 -170 -105 -222 l-27 -33 -44 67 c-102 155 -110 273 -22 327 41 26 114
-22 149 -8z"/>
-<path d="M219 389 c-73 -27 -51 -139 28 -139 87 0 102 121 18 143 -11 3 -32 1
--46 -4z"/>
-</g>
-</svg>
+                    <g transform="translate(0.000000,64.000000) scale(0.100000,-0.100000)"
+                    fill="#ff9800" stroke="none">
+                    <path d="M160 467 c-115 -77 -91 -239 65 -441 21 -28 40 -15 94 69 113 173
+                    121 304 22 371 -49 33 -134 34 -181 1z m168 -32 c40 -33 56 -76 49 -131 -5
+                    -51 -62 -170 -105 -222 l-27 -33 -44 67 c-102 155 -110 273 -22 327 41 26 114
+                    22 149 -8z"/>
+                    <path d="M219 389 c-73 -27 -51 -139 28 -139 87 0 102 121 18 143 -11 3 -32 1
+                    -46 -4z"/>
+                    </g>
+                </svg>
                 <br>
                 <br>
                 <div class="divider" id="eventdivider"></div>
