--- a/index.html
+++ b/index.html
@@ -333,36 +333,113 @@
 
 
 
-                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy" style="font-size: 70px;" data-aos="zoom-in">How IndNX 4.0 is different?</h3>
+                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy" style="font-size: 50px;" data-aos="zoom-in">How IndNX 4.0 is different?</h3>
 
-                    <div class="row">
-                        <div class="col s12 l6">
-                            <h4 class="center light">Traditional Events</h4>
-                            <br>
-                                <ol>
-                                    <li style="margin-left: 0px;">
-                                        <p class="flow-text light orange-text"><i class="material-icons yellow-text text-darken-4">donut_large</i>Superficial discussions</p>
-                                    </li>
-                                    <li>
-                                        <p class="flow-text light orange-text"><i class="material-icons yellow-text text-darken-4">donut_large</i>Students are mere spectators</p>
-                                    </li>
-                                </ol>
+                <div class="row">
+                    <br>
+                    <h3 class="center light">Traditional Events</h3>
+                    <br><br>
+                    <div class="col s12 m4 l3">
 
-                                <p class="flow-text light orange-text">Students just listen about how to do it</p>
-                                <p class="flow-text light orange-text">Business decision makers present their solutions </p>
-                                <p class="flow-text light orange-text">No mentoring of students </p>
+                        <br>
 
-                        </div>
-                        <div class="col s12 l6">
-                            <h4 class="center light">Conference on IIOT</h4>
-                            <br>
-                            <p class="flow-text light green-text">Learn entire approach that goes into building an IoT solution</p>
-                            <p class="flow-text light green-text">Students an important part of the event</p>
-                            <p class="flow-text light green-text">Students would build an end to end IoT solution</p>
-                            <p class="flow-text light green-text">Business decision makers all ears to students' built use-cases</p>
-                            <p class="flow-text light green-text">Students would be mentored by market leaders themselves </p>
-                        </div>
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 297 297" enable-background="new 0 0 297 297" width="64px" height="64px">
+  <g>
+    <path d="M148.5,116.187c32.029,0,58.086-26.057,58.086-58.086S180.529,0.014,148.5,0.014S90.414,26.072,90.414,58.101   S116.471,116.187,148.5,116.187z M120.402,51.894c3.429-3.427,8.985-3.427,12.414,0l8.387,8.388L164.184,37.3   c3.429-3.427,8.985-3.427,12.414,0c3.428,3.428,3.428,8.986,0,12.414L147.41,78.902c-1.714,1.713-3.96,2.571-6.207,2.571   c-2.247,0-4.493-0.857-6.207-2.571l-14.594-14.594C116.974,60.88,116.974,55.321,120.402,51.894z" fill="#FFDA44"/>
+    <path d="M34.165,84.869c18.839,0,34.166-15.327,34.166-34.166S53.004,16.537,34.165,16.537S0,31.864,0,50.703   S15.326,84.869,34.165,84.869z" fill="#FFDA44"/>
+    <path d="m3.367,133.777v70.955c0,16.297 13.211,29.508 29.508,29.508h38.457v52.407c0,3.992 3.236,7.229 7.229,7.229h34.077c3.992,0 7.229-3.236 7.229-7.229v-75.595c0-13.757-11.152-24.908-24.908-24.908h-29.995v-52.367c0-17.009-13.789-30.798-30.798-30.798-17.01-0.001-30.799,13.788-30.799,30.798z" fill="#FFDA44"/>
+    <path d="m262.835,84.869c18.839,0 34.165-15.327 34.165-34.166s-15.326-34.166-34.165-34.166-34.166,15.327-34.166,34.166 15.327,34.166 34.166,34.166z" fill="#FFDA44"/>
+    <path d="m232.036,133.777v52.367h-29.994c-13.757,0-24.909,11.152-24.909,24.908v75.595c0,3.992 3.236,7.229 7.229,7.229h34.077c3.992,0 7.229-3.236 7.229-7.229v-52.407h38.457c16.297,0 29.508-13.211 29.508-29.508v-70.955c0-17.009-13.789-30.798-30.798-30.798-17.01-0.001-30.799,13.788-30.799,30.798z" fill="#FFDA44"/>
+    <path d="m199.616,151.813c4.848,0 8.777-3.93 8.777-8.777 0-4.848-3.93-8.777-8.777-8.777h-102.232c-4.848,0-8.777,3.93-8.777,8.777 0,4.848 3.93,8.777 8.777,8.777h42.338v136.395c0,4.848 3.93,8.777 8.777,8.777s8.777-3.93 8.777-8.777v-136.395h42.34z" fill="#FFDA44"/>
+  </g>
+</svg>
+
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Superficial <br> discussions</p>
+
+                        <!-- <p class="flow-text light orange-text" style="font-size: 20px;text-align: left">Superficial discussions</p>
+                                        <p class="flow-text light orange-text" style="font-size: 20px;text-align: left">Students are mere spectators</p>
+
+
+                                <p class="flow-text light orange-text" style="font-size: 20px;text-align: left">Students just listen about how to do it</p>
+                                <p class="flow-text light orange-text" style="font-size: 20px;text-align: left">Business decision makers present their solutions </p>
+                                <p class="flow-text light orange-text" style="font-size: 20px;text-align: left">No mentoring of students </p>-->
+
                     </div>
+
+                    <div class="col s12 m4 l3">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 28.874 28.873" style="enable-background:new 0 0 28.874 28.873;" xml:space="preserve">
+<g>
+	<g>
+		<circle cx="11.053" cy="8.619" r="2.35" fill="#FFDA44"/>
+		<circle cx="16.161" cy="17.37" r="1.507" fill="#FFDA44"/>
+		<path d="M24.423,12.417c1.894-9.269-5.637-13.511-13.995-12.176C2.069,1.574,2.383,6.63,1.891,9.043    C0.912,15.09,7.137,21.848,7.137,21.848l-0.355,7.025h10.136l0.776-3.23c0,0,0.44,0.738,3.059,0.96    c2.62,0.222,2.301-2.976,2.301-2.976s1.744-0.77,1.744-1.346c0-0.578-1.032-1.322-1.032-1.322s1.109,0.199,1.511-0.268    c0.399-0.467-0.49-2.154-0.49-2.154s1.368-0.035,2.174-0.922C27.767,16.729,24.423,14.106,24.423,12.417z M9.946,13.684    c0,0-0.057-0.626-0.085-0.939c-0.252-0.067-0.495-0.156-0.728-0.26c-0.276,0.234-0.828,0.701-0.828,0.701    s-0.094,0.052-0.141,0.078c-0.047,0.025-0.925-0.078-0.925-0.078l-1.51-1.783v-1.065c0,0,0.581-0.492,0.871-0.738    C6.537,9.361,6.499,9.118,6.482,8.867C6.101,8.692,5.341,8.345,5.341,8.345L5.036,7.458l0.035-0.145l0.975-2.124l1.031-0.271    c0,0,0.656,0.3,0.983,0.449c0.2-0.162,0.416-0.309,0.644-0.438C8.671,4.534,8.607,3.743,8.607,3.743L9.361,2.99l2.328-0.188    l0.754,0.754c0,0,0.048,0.601,0.073,0.901c0.303,0.082,0.592,0.191,0.867,0.324c0.252-0.217,0.757-0.649,0.757-0.649h1.067    l1.521,1.774V6.97c0,0-0.617,0.528-0.926,0.793c0.046,0.215,0.07,0.437,0.081,0.661c0.39,0.225,1.168,0.675,1.168,0.675    l0.271,1.031l-1.169,2.022l-1.031,0.271c0,0-0.605-0.35-0.908-0.524c-0.171,0.133-0.354,0.251-0.544,0.36    c0.036,0.404,0.109,1.211,0.109,1.211l-0.753,0.754l-2.325,0.212L9.946,13.684z M19.431,19.637l-0.661,0.174    c0,0-0.388-0.225-0.583-0.336c-0.11,0.085-0.228,0.16-0.35,0.23c0.023,0.26,0.07,0.776,0.07,0.776l-0.482,0.483l-1.491,0.136    l-0.483-0.483c0,0-0.037-0.4-0.055-0.603c-0.162-0.043-0.317-0.101-0.466-0.167c-0.177,0.15-0.531,0.449-0.531,0.449    s-0.061,0.033-0.09,0.051c-0.03,0.018-0.594-0.051-0.594-0.051l-0.968-1.145v-0.684c0,0,0.372-0.315,0.558-0.473    c-0.04-0.152-0.064-0.31-0.075-0.471c-0.245-0.111-0.732-0.335-0.732-0.335l-0.196-0.567l0.022-0.094l0.625-1.361l0.662-0.174    c0,0,0.42,0.191,0.63,0.288c0.128-0.104,0.267-0.197,0.413-0.281c-0.02-0.253-0.061-0.762-0.061-0.762l0.483-0.483l1.493-0.12    l0.484,0.483c0,0,0.03,0.385,0.046,0.578c0.194,0.053,0.38,0.123,0.556,0.208c0.162-0.139,0.486-0.417,0.486-0.417h0.685    l0.977,1.14v0.684c0,0-0.396,0.339-0.595,0.509c0.03,0.138,0.045,0.28,0.052,0.425c0.25,0.145,0.75,0.432,0.75,0.432l0.173,0.662    L19.431,19.637z" fill="#FFDA44"/>
+	</g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+</svg>
+
+                        <br><br>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Students just listen <br> about how to do it</p>
+                    </div>
+
+                    <div class="col s12 m4 l3">
+
+                        <svg aria-hidden="true" data-prefix="fas" data-icon="graduation-cap" class="svg-inline--fa fa-graduation-cap fa-w-20" width="64.000000pt" height="64.000000pt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="#ffd600" d="M622.884 199.005l-275.817 85.1a96 96 0 0 1-54.134 0L92.398 222.232c-8.564 11.438-11.018 23.05-11.918 38.335C89.778 266.165 96 276.355 96 288c0 11.952-6.557 22.366-16.265 27.861l16.197 123.096c.63 4.786-3.1 9.043-7.932 9.043H40c-4.828 0-8.562-4.253-7.932-9.044L48.265 315.86C38.557 310.366 32 299.952 32 288c0-12.034 6.646-22.511 16.465-27.976.947-17.951 3.974-33.231 12.152-47.597l-43.502-13.422c-22.876-6.801-22.766-39.241 0-46.01l275.817-85.1a96 96 0 0 1 54.134 0l275.817 85.1c22.877 6.801 22.767 39.241.001 46.01zM356.503 314.682l-.207.064-.207.061a127.998 127.998 0 0 1-72.177 0l-.207-.061-.207-.064-150.914-46.57L120 352c0 35.346 89.543 64 200 64s200-28.654 200-64l-12.583-83.888-150.914 46.57z"></path></svg>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Students are <br> mere spectators</p>
+
+
+                    </div>
+
+
+                    <div class="col s12 m4 l3">
+
+                        <svg aria-hidden="true" data-prefix="fas" data-icon="user-tie" class="svg-inline--fa fa-user-tie fa-w-10" width="64px" height="64px" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="#ffd600" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm95.8 32.6L272 480l-32-136 32-56h-96l32 56-32 136-47.8-191.4C56.9 292 0 350.3 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-72.1-56.9-130.4-128.2-133.8z"></path></svg>
+
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Business decision makers present their solutions </p>
+
+                    </div>
+
+
+                    <!--<div class="col s12 l6">
+                            <h4 class="center light" style="font-size: 25px;">Conference on IIOT</h4>
+                            <br>
+                            <p class="flow-text light green-text" style="font-size: 20px;text-align: left">Learn entire approach that goes into building an IoT solution</p>
+                            <p class="flow-text light green-text" style="font-size: 20px;text-align: left">Students an important part of the event</p>
+                            <p class="flow-text light green-text" style="font-size: 20px;text-align: left">Students would build an end to end IoT solution</p>
+                            <p class="flow-text light green-text" style="font-size: 20px;text-align: left">Business decision makers all ears to students' built use-cases</p>
+                            <p class="flow-text light green-text" style="font-size: 20px;text-align: left">Students would be mentored by market leaders themselves </p>
+                        </div>-->
+                </div>
 
 
             </div>
@@ -377,9 +454,9 @@
 
 
 
-                <h3 class="center  light orange-text  padded-bottom-compact padded-top-cozy" data-aos="zoom-in strong">Institute Benefits</h3>
+                <h3 class="center  light orange-text  padded-bottom-compact padded-top-cozy" data-aos="zoom-in">Institute Benefits</h3>
 
-                <p class="flow-text ">
+                <p class="flow-text" style="font-size: 20px;">
                     Exposure to newer technologies and engineering methodologies
                     <br> Opportunity to present project prototype on the conference day
                     <br> Chance to get noticed by Industrialists/Mentors/Investors
@@ -460,72 +537,72 @@
 
     </main>
 
-   <section style="border-top: 6px solid orange">
-            <div class="parallax-container" style="height: 35vh;">
-                  <div class="container">
-                  <br><br>
-            <div class="row">
-                <div class="col l6 s12">
-                    <img src="images/Logo_.jpg%20copy.png" class="col s6 ">
-                    <!--<p class="white-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
+    <section style="border-top: 6px solid orange">
+        <div class="parallax-container" style="height: 35vh;">
+            <div class="container">
+                <br><br>
+                <div class="row">
+                    <div class="col l6 s12">
+                        <img src="images/Logo_.jpg%20copy.png" class="col s6 ">
+                        <!--<p class="white-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
                         from diffrent sectors and Institutes</p>-->
+                    </div>
+                    <div class="col l3 s6">
+
+                        <ul>
+                            <li>
+                                <a class="waves-effect white-text" href="index.html">Home</a>
+                            </li>
+                            <li>
+                                <a class="waves-effect white-text" href="hackathon.html">Hackathon</a>
+                            </li>
+                            <li>
+                                <a class="waves-effect white-text" href="conference.html">Conference</a>
+                            </li>
+                            <li>
+                                <a class="waves-effect white-text" href="about.html">About</a>
+                            </li>
+                            <li>
+                                <a class="waves-effect white-text" href="contact.html">Contact</a>
+                            </li>
+
+                        </ul>
+                    </div>
+
+                    <div class="col l3 s6">
+
+                        <ul>
+                            <li>
+                                <a class="waves-effect white-text " href="faq.html ">FAQ's</a>
+                            </li>
+                            <li>
+                                <a class="waves-effect white-text " href="terms.html ">Terms</a>
+                            </li>
+                            <li>
+                                <a class="waves-effect white-text " href="mentors.html ">Mentors</a>
+                            </li>
+                            <li>
+                                <a class="waves-effect white-text " href="support.html ">Support</a>
+                            </li>
+                            <li>
+                                <a class="waves-effect white-text " href="privacypolicy.html ">Privacy Policy</a>
+                            </li>
+
+                        </ul>
+                    </div>
                 </div>
-                <div class="col l3 s6">
-
-                    <ul>
-                        <li>
-                            <a class="waves-effect white-text" href="index.html">Home</a>
-                        </li>
-                        <li>
-                            <a class="waves-effect white-text" href="hackathon.html">Hackathon</a>
-                        </li>
-                        <li>
-                            <a class="waves-effect white-text" href="conference.html">Conference</a>
-                        </li>
-                        <li>
-                            <a class="waves-effect white-text" href="about.html">About</a>
-                        </li>
-                        <li>
-                            <a class="waves-effect white-text" href="contact.html">Contact</a>
-                        </li>
-
-                    </ul>
+            </div>
+            <div class="footer-copyright ">
+                <div class="container ">
+                    <a href="https://dayshmookh.github.io/ " class="white-text " target="_blank ">© 2018 R00T INC.</a>
+                    <!--<a class="white-text right " href="#! ">More Links</a>-->
                 </div>
-
-                <div class="col l3 s6">
-
-                    <ul>
-                        <li>
-                            <a class="waves-effect white-text " href="faq.html ">FAQ's</a>
-                        </li>
-                        <li>
-                            <a class="waves-effect white-text " href="terms.html ">Terms</a>
-                        </li>
-                        <li>
-                            <a class="waves-effect white-text " href="mentors.html ">Mentors</a>
-                        </li>
-                        <li>
-                            <a class="waves-effect white-text " href="support.html ">Support</a>
-                        </li>
-                        <li>
-                            <a class="waves-effect white-text " href="privacypolicy.html ">Privacy Policy</a>
-                        </li>
-
-                    </ul>
-                </div>
+            </div>
+            <div class="parallax">
+                <img src="images/architecture-buildings-city-358488.jpg" alt="Unsplashed background img 1" style="opacity: 0.2;    filter: brightness(30%) saturate(150%);">
             </div>
         </div>
-        <div class="footer-copyright ">
-            <div class="container ">
-                <a href="https://dayshmookh.github.io/ " class="white-text " target="_blank ">© 2018 R00T INC.</a>
-                <!--<a class="white-text right " href="#! ">More Links</a>-->
-            </div>
-        </div>
-                <div class="parallax">
-                    <img src="images/architecture-buildings-city-358488.jpg" alt="Unsplashed background img 1" style="opacity: 0.2;    filter: brightness(30%) saturate(150%);">
-                </div>
-            </div>
-        </section>
+    </section>
     <script src="js/jquery.min.js "></script>
     <script src="js/materialize.min.js "></script>
     <script src="js/aos.js "></script>
@@ -546,6 +623,7 @@
                 maxGlare: 0.4 // From 0 - 1.
             });
         });
+
     </script>
 </body>
 
