--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                     <div class="col s12 m4 l3">
 
                         <svg aria-hidden="true" data-prefix="fas" data-icon="user-tie" class="svg-inline--fa fa-user-tie fa-w-10" width="64px" height="64px" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="#ffd600" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm95.8 32.6L272 480l-32-136 32-56h-96l32 56-32 136-47.8-191.4C56.9 292 0 350.3 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-72.1-56.9-130.4-128.2-133.8z"></path></svg>
-
+                        <br><br>
                         <p class="flow-text light orange-text" style="font-size: 20px;">Business decision makers present their solutions </p>
 
                     </div>
@@ -444,6 +444,167 @@
 
             </div>
 
+            <div class="container center padded-bottom-cozy">
+                <div class="row">
+                    <h3 class="center light">Conference on IIOT</h3>
+                    <br>
+                    <br>
+                    <div class="col s12 m4 l3">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 47 47" style="enable-background:new 0 0 47 47;" xml:space="preserve">
+<g>
+	<g id="Layer_1_110_">
+		<g>
+			<path d="M17.567,15.938l-2.859-2.702c0.333-0.605,0.539-1.29,0.539-2.029c0-2.342-1.897-4.239-4.24-4.239     c-2.343,0-4.243,1.896-4.243,4.239c0,2.343,1.9,4.241,4.243,4.241c0.826,0,1.59-0.246,2.242-0.654l2.855,2.699     C16.536,16.922,17.023,16.399,17.567,15.938z" fill="#FFDA44"/>
+			<path d="M29.66,15.6l3.799-6.393c0.374,0.107,0.762,0.184,1.169,0.184c2.347,0,4.244-1.898,4.244-4.241     c0-2.342-1.897-4.239-4.244-4.239c-2.343,0-4.239,1.896-4.239,4.239c0,1.163,0.469,2.214,1.227,2.981l-3.787,6.375     C28.48,14.801,29.094,15.169,29.66,15.6z" fill="#FFDA44"/>
+			<path d="M42.762,20.952c-1.824,0-3.369,1.159-3.968,2.775l-5.278-0.521c0,0.04,0.006,0.078,0.006,0.117     c0,0.688-0.076,1.36-0.213,2.009l5.276,0.521c0.319,2.024,2.062,3.576,4.177,3.576c2.342,0,4.238-1.896,4.238-4.238     C47,22.85,45.104,20.952,42.762,20.952z" fill="#FFDA44"/>
+			<path d="M28.197,37.624l-1.18-5.156c-0.666,0.232-1.359,0.398-2.082,0.481l1.182,5.157c-1.355,0.709-2.29,2.11-2.29,3.746     c0,2.342,1.896,4.237,4.243,4.237c2.342,0,4.238-1.896,4.238-4.237C32.311,39.553,30.479,37.692,28.197,37.624z" fill="#FFDA44"/>
+			<path d="M14.357,25.37l-6.57,2.201c-0.758-1.158-2.063-1.926-3.548-1.926C1.896,25.645,0,27.542,0,29.884     c0,2.345,1.896,4.242,4.239,4.242c2.341,0,4.242-1.897,4.242-4.242c0-0.098-0.021-0.188-0.029-0.284l6.591-2.207     C14.746,26.752,14.51,26.077,14.357,25.37z" fill="#FFDA44"/>
+			<circle cx="23.83" cy="23.323" r="7.271" fill="#FFDA44"/>
+		</g>
+	</g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+</svg>
+                 <p class="flow-text light orange-text" style="font-size: 20px;">Learn entire approach that goes into building an IoT solution</p>
+
+
+                    </div>
+
+                    <div class="col s12 m4 l3">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 912.1 912.1" style="enable-background:new 0 0 912.1 912.1;" xml:space="preserve">
+<g>
+	<g>
+		<path d="M504.607,574.9c102.8,0,186.4-83.601,186.4-186.4s-83.601-186.4-186.4-186.4c-102.799,0-186.4,83.6-186.4,186.4    S401.808,574.9,504.607,574.9z" fill="#FFDA44"/>
+		<g>
+			<path d="M346.108,611.9c-71.8,0-130,58.199-130,130V887.1c0,13.801,11.2,25,25,25h527c13.8,0,25-11.199,25-25V745.5     c2.2-3.8,4.2-7.9,5.8-12.2l102-270c3.4-9,5.2-18.6,5.2-28.3V132c0-44.2-35.8-80-80-80s-80,35.8-80,80v288.4l-72.3,191.5H346.108z     " fill="#FFDA44"/>
+			<path d="M30.808,178.1h59c12.4,0,22.9-9,24.7-21.2c3.4-22.2,10.3-38.6,20.5-48.5c9.5-9.2,22.6-13.7,40.2-13.7     c18.2,0,32.1,5,42.7,15.4c10.6,10.4,15.5,22.9,15.5,39.5c0,7.8-1.8,15-5.5,22c-1.9,3.5-9.3,14.3-37.5,38.2     c-26.2,22.2-43.9,43.1-54.2,63.8c-10.5,21.1-15.6,51.8-15.6,93.6l0,0c0,13.8,11.2,25,25,25h53.3c13.8,0,25-11.2,25-25l0,0     c0-32.3,3.9-45.5,6.2-50.5c1.8-4,9.3-15.8,39-40.4c27.6-22.9,46.2-43.8,56.8-63.8c10.9-20.5,16.4-43,16.4-66.8     c0-42.5-16.101-78-48-105.6c-30.8-26.6-71-40.1-119.5-40.1c-46.2,0-85.3,13.8-116,40.9c-31,27.4-48.7,64.5-52.7,110.2l0,0     C4.708,165.5,16.208,178.1,30.808,178.1z" fill="#FFDA44"/>
+			<path d="M198.708,533.6c13.8,0,25-11.199,25-25V455.4c0-13.801-11.2-25-25-25h-53.2c-13.8,0-25,11.199-25,25V508.6     c0,13.801,11.2,25,25,25H198.708z" fill="#FFDA44"/>
+		</g>
+	</g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+</svg>
+                    <p class="flow-text light orange-text" style="font-size: 20px;">Students an important part of the event</p>
+
+                    </div>
+
+                    <div class="col s12 m4 l3">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
+<g>
+	<path d="M63.946,118.649c5.727,0,11.353-0.897,16.773-2.625l32.214,32.192l35.279-35.272l-32.199-32.227   c6.207-19.396,1.107-40.888-13.359-55.349C92.356,15.067,78.647,9.396,64.091,9.396c-8.133,0-16.288,1.843-23.605,5.332   c-1.104,0.526-1.877,1.552-2.084,2.755c-0.201,1.203,0.186,2.424,1.045,3.291l33.894,33.902c2.501,2.499,3.881,5.817,3.881,9.339   c0,3.531-1.382,6.843-3.881,9.342c-4.979,4.994-13.684,4.994-18.672-0.013L20.763,39.451c-0.869-0.869-2.118-1.25-3.287-1.048   c-1.206,0.207-2.229,0.98-2.755,2.084c-9.958,20.868-5.69,45.858,10.641,62.177C35.666,112.968,49.368,118.649,63.946,118.649z" fill="#FFDA44"/>
+	<path d="M236.074,181.348c-5.739,0-11.374,0.903-16.798,2.635l-35.631-35.634l-35.303,35.297l35.641,35.64   c-6.194,19.39-1.098,40.876,13.359,55.346c10.301,10.301,24.01,15.973,38.565,15.973c8.137,0,16.291-1.847,23.608-5.335   c1.104-0.525,1.877-1.552,2.084-2.755c0.207-1.203-0.186-2.425-1.045-3.291l-33.893-33.909c-2.496-2.493-3.875-5.805-3.878-9.327   c0-3.528,1.379-6.84,3.884-9.342c4.995-4.998,13.681-4.995,18.666,0.003l33.899,33.893c0.866,0.863,2.075,1.247,3.291,1.048   c1.203-0.21,2.23-0.98,2.755-2.084c9.958-20.865,5.693-45.852-10.638-62.174C264.339,187.029,250.64,181.348,236.074,181.348z" fill="#FFDA44"/>
+	<path d="M221.571,100.988c0,0,5.897,5.165,10.759,2.752c5.495-2.765,20.976,12.497,25.915,16.068   c0.016,0.012,0.05,0.012,0.108,0.04l-2.7,2.712c-3.566,3.525-3.563,9.281-0.009,12.812c3.556,3.541,9.274,3.538,12.831,0   l21.378-21.35c3.532-3.55,3.535-9.296-0.006-12.84c-3.528-3.532-9.283-3.532-12.824,0.003l-3.56,3.557   c-2.95-4.063-7.852-10.988-7.23-13.282c2.607-10.047-17.875-33.779-17.875-33.779C197.49,6.823,163.513,7.979,147.349,13.537   c-6.488,2.232-5.285,3.646,1.454,4.833c49.04,8.56,55.123,37.48,46.81,48.638c-3.197,4.308,1.466,9.509,1.466,9.509l1.753,1.741   l-82.803,82.788c1.123,0.677,2.214,1.447,3.176,2.412l13.929,13.916c0.946,0.949,1.719,2.032,2.39,3.154l82.804-82.791   L221.571,100.988z" fill="#FFDA44"/>
+	<path d="M113.632,169.025c-3.056-3.059-8.257-3.256-11.526-0.417l-92.019,82.497c-3.284,2.836-3.467,7.663-0.405,10.725   l25.064,25.046c3.064,3.062,7.882,2.891,10.715-0.375l82.522-92.046c2.823-3.266,2.644-8.449-0.421-11.507L113.632,169.025z" fill="#FFDA44"/>
+</g>
+</svg>
+            <p class="flow-text light orange-text" style="font-size: 20px;">Students would build an end to end IoT solution</p>
+
+                    </div>
+
+                    <div class="col s12 m4 l3">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 174.661 174.661" style="enable-background:new 0 0 174.661 174.661;" xml:space="preserve">
+<g>
+	<g>
+		<path d="M142.395,29.698c-7.563-16.355-22.542-24.728-34.039-27.103C80.638-3.156,59.558,0.668,45.635,13.888    C22.04,36.295,27.995,77.145,28.263,78.871c0.262,1.702,1.891,2.886,3.544,2.606c1.702-0.262,2.874-1.851,2.612-3.547    c-0.063-0.393-5.711-39.391,15.524-59.537C62.301,6.678,81.537,3.417,107.083,8.7c10.011,2.07,23.054,9.365,29.643,23.617    c8.312,17.991,4.213,43.014-11.862,72.373c-4.39,8.031-6.053,14.729-7.788,21.83c-1.937,7.867-4.11,16.781-10.576,29.715    c-3.824,7.654-16.88,12.982-29.771,12.1c-5.967-0.396-20.389-2.881-25.525-17.714c-6.01-10.54-13.643-29.849-8.507-36.772    c2.962-4,10.352-3.288,15.908-2.064c1.346,0.816,2.968,6.918,3.934,10.577c2.308,8.726,5.045,18.517,12.178,17.981    c0.441,0.024,10.979,0.895,15.202-6.242c3.337-5.626,1.564-13.761-5.401-24.801c5.45-5.236,19.352-20.441,12.775-33.837    c-2.046-4.181-8.659-9.996-17.007-9.996H80.06c-4.713,0.061-11.049,2.058-16.593,10.324c-2.476-7.599-5.542-20.783-1.167-30.702    c2.469-5.611,6.936-9.393,13.643-11.542c4.99-1.62,21.708-3.212,31.438,5.824c7.928,7.344,9.772,20.134,5.498,38.03    c-0.396,1.68,0.64,3.352,2.302,3.763c1.693,0.42,3.355-0.646,3.77-2.305c4.835-20.24,2.381-35.062-7.313-44.046    c-12.823-11.874-32.906-8.687-37.588-7.191c-8.4,2.701-14.273,7.739-17.467,14.979c-7.624,17.278,3.038,40.91,3.504,41.899    c0.505,1.111,1.617,1.82,2.832,1.82s2.326-0.709,2.832-1.814c3.809-8.299,8.777-12.72,14.386-12.793h0.137    c5.298,0,10.103,3.821,11.411,6.497c4.811,9.795-7.934,23.684-13.25,28.208c-1.206,1.022-1.449,2.782-0.569,4.098    c8.662,12.909,7.907,18.322,6.68,20.399c-2.177,3.689-9.204,3.215-9.81,3.215c-2.612-0.049-4.826-8.281-6.18-13.372    c-1.976-7.478-3.69-13.938-8.455-15.01c-10.89-2.466-18.438-0.98-22.408,4.391c-9.198,12.422,6.302,40.419,7.861,43.038    c4.305,12.568,15.521,20.35,30.778,21.373c1.111,0.079,2.207,0.115,3.3,0.109c14.458,0,27.788-6.297,32.458-15.637    c6.776-13.566,9.048-22.835,11.058-31.019c1.705-6.978,3.19-13.007,7.197-20.325C147.643,76.083,151.699,49.844,142.395,29.698z" fill="#FFDA44"/>
+	</g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+</svg>
+
+                    <p class="flow-text light orange-text" style="font-size: 20px;">Business decision makers all ears to students</p>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         <div class="divider"></div>
@@ -454,7 +615,7 @@
 
 
 
-                <h3 class="center  light orange-text  padded-bottom-compact padded-top-cozy" data-aos="zoom-in">Institute Benefits</h3>
+                <h3 class="center strong orange-text  padded-bottom-compact padded-top-cozy" data-aos="zoom-in">Institute Benefits</h3>
 
                 <p class="flow-text" style="font-size: 20px;">
                     Exposure to newer technologies and engineering methodologies
