--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
 
             <div class="col s12 m6" style="padding-left: 0; height: 100px;">
                 <div class="parallax-container">
-                    <div class="parallax">
+                    <div class="parallax" style="height: 640px;">
                         <img src="images/11111.jpg" class="dark" data-aos="flip-up">
                     </div>
                     <div class="section valign-wrapper full-height">
