--- a/hackathon.html
+++ b/hackathon.html
@@ -106,7 +106,7 @@
                 <div class="valign-wrapper full-height">
                     <div class="container full-width">
 
-                        <h1 class="light center white-text">SMART INDUSTRIAL HACKATHON</h1>
+                        <h1 class="light center white-text">SMART   INDUSTRY   HACKATHON</h1>
 
 
                     </div>
