--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                 <!--<h6 class="center light grey-text">About</h6>-->
                 <h3 class="center orange-text strong" data-aos="zoom-in">IndNX 4.0</h3>
-                <h5 class="center orange-text strong" data-aos="zoom-in">Smart Industries Hackathon (Edition 1)</h5>
+                <h5 class="center orange-text strong" data-aos="zoom-in">Smart Industry Hackathon (Edition 1)</h5>
 
                 <p class="center  text-darken-2 padded-top-compact flow-text light">There's a lot of hype about terms like IoT, IIoT, Machine Learning, Artificial Intelligence among institute and industry personnel, yet a lot of confusion revolves around these terms. To address this, CII has come up with a unique Industry-Institution interaction event called IndNX 4.0 - Smart Industries Hackathon (Edition 1).</p>
             </div>
