--- a/index.html
+++ b/index.html
@@ -325,11 +325,11 @@
     -->
 
         <section>
-            <div class="container center padded-bottom-cozy">
+            <div class=" center padded-bottom-cozy grey lighten-3">
 
 
 
-                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy" style="font-size: 50px;" data-aos="zoom-in">How IndNX 4.0 is different?</h3>
+                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy " style="font-size: 50px;" data-aos="zoom-in">How IndNX 4.0 is different?</h3>
 
                 <div class="row">
                     <br>
