--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="fixed full-width" data-aos="fade-down" data-aos-offset="1200" data-aos-easing="ease-in-sine" style="z-index: 998;">
-            <nav class="white">
+            <nav class=" blue darken-4">
                 <div class="nav-wrapper container">
                     <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
                         <i class="material-icons">menu</i>
@@ -31,22 +31,22 @@
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="index.html">Home</a>
+                            <a class="waves-effect waves-orange" href="index.html" id="navig">Home</a>
                         </li>
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="hackathon.html">Hackathon</a>
+                            <a class="waves-effect waves-orange" href="hackathon.html">Hackathon</a>
                         </li>
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="conference.html">Conference</a>
+                            <a class="waves-effect waves-orange" href="conference.html">Conference</a>
                         </li>
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="about.html">About</a>
+                            <a class="waves-effect waves-orange" href="about.html">About</a>
                         </li>
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="contact.html">Contact</a>
+                            <a class="waves-effect waves-orange" href="contact.html">Contact</a>
                         </li>
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
+                            <a class="waves-effect waves-orange" href="faq.html">FAQ</a>
                         </li>
                         <li>
                             <a href="https://reg.form.link" class="btn orange white-text">Register</a>
@@ -124,12 +124,25 @@
 
 
 
-        <div class="container center padded-bottom-cozy">
+        <div class="container center padded-bottom-cozy row">
 
 
-            <img src="images/things.png" alt="bfdgbjdg" style="max-width: 90vw;">
+           <!-- <img src="images/things.png" alt="bfdgbjdg" style="max-width: 90vw;">-->
 
-
+           <div class="col s12 m4 l4">
+               <img src="images/icon1.png" alt="">
+               <p style="font-size: 20px;">Pre Conference Project Competetion</p>
+           </div>
+           <div class="col s12 m4 l4">
+               <img src="images/icon2.png" alt="">
+               <p style="font-size: 20px;">
+                   Project <br> Implementation
+               </p>
+           </div>
+           <div class="col s12 m4 l4">
+               <img src="images/icon3.png" alt="">
+               <p style="font-size: 20px;">Conference <br> Day</p>
+           </div>
         </div>
 
 
@@ -171,7 +184,7 @@
 
                 <h3 class="center orange-text padded-bottom-compact padded-top-cozy strong" data-aos="zoom-in">Objectives</h3>
 
-                <p class="flow-text light">
+                <p class="flow-text light" style="text-align: left">
                     Bridging increasing gap between academic institutions and corporate world.
                     <br> Providing exposure to newer technologies and engineering methodologies.
                     <br> Letting students learn from the market leaders themselves.
