--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" >
     <title>IndNX 4.0 </title>
 
     <link rel="stylesheet" href="css/materialize.min.css">
@@ -26,7 +26,7 @@
                     <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
                         <i class="material-icons">menu</i>
                     </a>
-                    <a href="#!" class="brand-logo black-text">
+                    <a href="index.html" class="brand-logo black-text">
                         <img src="images/Logo_.jpg%20copy.png">
                     </a>
                     <ul class="right hide-on-med-and-down">
@@ -187,9 +187,9 @@
             <div class="valign-wrapper full-height">
                 <div class="container full-width">
 
-                    <h3 class="light center white-text" style="font-size: 100px;">Register</h3>
+                    <h3 class="light center white-text strong" style="font-size: 100px;">Register</h3>
                     <!--  <p class="center light white-text">Ssome details about registeration if any.</p>
-                  -->
+                  --><h2 class="center white-text" style="font-size: 30px;">Open till 20th July 2k18</h2>
                     <p class="center">
                         <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat yellow-text">Register now</a>
                     </p>
@@ -329,11 +329,11 @@
 
 
 
-                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy " style="font-size: 50px;" data-aos="zoom-in">How IndNX 4.0 is different?</h3>
+                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy strong " style="font-size: 50px;" data-aos="zoom-in">How IndNX 4.0 is different?</h3>
 
                 <div class="row">
                     <br>
-                    <h3 class="center light">Traditional Events</h3>
+                    <h3 class="center light orange-text strong">Traditional Events</h3>
                     <br><br>
                     <div class="col s12 m4 l3">
 
@@ -442,7 +442,7 @@
 
             <div class="container center padded-bottom-cozy">
                 <div class="row">
-                    <h3 class="center light">Conference on IIOT</h3>
+                    <h3 class="center light orange-text strong">Conference on IIOT</h3>
                     <br>
                     <br>
                     <div class="col s12 m4 l3">
