--- a/conference.html
+++ b/conference.html
@@ -22,7 +22,7 @@
         <div class="navbar-fixed">
             <nav class="white">
                 <div class="nav-wrapper container">
-                    <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
+                    <a href="href="index.html data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
                         <i class="material-icons">menu</i>
                     </a>
                     <a href="index.html" class="brand-logo black-text">
