--- a/index.html
+++ b/index.html
@@ -337,7 +337,8 @@
     -->
 
         <section>
-            <div class=" center padded-bottom-cozy grey lighten-3">
+           <div class="grey lighten-3">
+            <div class=" container center padded-bottom-cozy ">
 
 
 
@@ -437,7 +438,7 @@
 
                     </div>
 
-
+                </div>
                     <!--<div class="col s12 l6">
                             <h4 class="center light" style="font-size: 25px;">Conference on IIOT</h4>
                             <br>
@@ -759,7 +760,7 @@
                 </div>
             </div>
             <div class="parallax">
-                <img src="images/architecture-buildings-city-358488.jpg" alt="Unsplashed background img 1" style="opacity: 0.2;    filter: brightness(30%) saturate(150%);">
+                <img src="images/architecture-buildings-city-358488.jpg" alt="Unsplashed background img 1" style="opacity: 0.7;    filter: brightness(40%) saturate(150%) contrast(100%);">
             </div>
         </div>
     </section>
