--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <!--  <p class="center light white-text">Ssome details about registeration if any.</p>
                   --><h2 class="center white-text" style="font-size: 30px;">Open till 20th July 2k18</h2>
                     <p class="center">
-                        <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat yellow-text">Register now</a>
+                        <a href="https://goo.gl/forms/NpKr7FkYCYPA7ySL2" class="btn btn-register-hero btn-large btn-flat yellow-text">Register now</a>
                     </p>
 
                 </div>
