--- a/index.html
+++ b/index.html
@@ -998,12 +998,8 @@
                     <!--<a class="white-text right " href="#! ">More Links</a>-->
                 </div>
             </div>
-            <div class="parallax">
-<<<<<<< HEAD
-                <img src="images/architecture-buildings-city-358488.jpg" alt="Unsplashed background img 1" style="opacity: 0.7;    filter: brightness(40%) saturate(150%) contrast(100%);">
-=======
-                <img src="images/architecture-buildings-city-358488.jpg" alt="Unsplashed background img 1" style="opacity: 0.2; filter: brightness(30%) saturate(150%);">
->>>>>>> origin/master
+            <div class="parallax"><img src="images/architecture-buildings-city-358488.jpg" alt="Unsplashed background img 1" style="opacity: 0.2; filter: brightness(30%) saturate(150%);">
+
             </div>
         </div>
     </section>
