--- a/conference.html
+++ b/conference.html
@@ -46,7 +46,7 @@
                             <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
                         </li>
                         <li>
-                            <a href="https://reg.form.link" class="btn orange white-text">Register</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
                         </li>
                     </ul>
                 </div>
@@ -73,7 +73,7 @@
                 <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
             </li>
             <li>
-                <a href="https://reg.form.link" class="btn orange white-text">Register</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
             </li>
         </ul>
 
@@ -120,7 +120,7 @@
 
         <br>
         <p class="center">
-            <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat" id="registerbtn">Register now</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat" id="registerbtn">Register now</a>
         </p>
         <br>
         <div class="row">
