--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                             <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
                         </li>
                         <li>
-                            <a href="https://reg.form.link" class="btn orange white-text">Register</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
                         </li>
                     </ul>
                 </div>
@@ -71,7 +71,7 @@
                 <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
             </li>
             <li>
-                <a href="https://reg.form.link" class="btn orange white-text">Register</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
             </li>
         </ul>
 
@@ -91,7 +91,7 @@
                             <h1 class="center white-text">IndNX 4.0</h1>
                             <p class="center white-text">some details about registration process</p>
                             <p class="center">
-                                <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
                             </p>
                         </div>
                     </div>
