--- a/hackathon.html
+++ b/hackathon.html
@@ -59,7 +59,7 @@
                             <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
                         </li>
                         <li>
-                            <a href="https://reg.form.link" class="btn orange white-text">Register</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
                         </li>
                     </ul>
                 </div>
@@ -86,7 +86,7 @@
                 <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
             </li>
             <li>
-                <a href="https://reg.form.link" class="btn orange white-text">Register</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
             </li>
         </ul>
     </header>
@@ -158,7 +158,7 @@
         </section>-->
         <br>
         <p class="center">
-            <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat" id="registerbtn">Register now</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat" id="registerbtn">Register now</a>
         </p>
         <br>
         <div class="row">
