--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a class="waves-effect waves-orange" href="faq.html">FAQ</a>
                         </li>
                         <li>
-                            <a href="https://reg.form.link" class="btn orange white-text">Register</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
                         </li>
                     </ul>
                 </div>
@@ -258,7 +258,7 @@
                     <!--  <p class="center light white-text">Ssome details about registeration if any.</p>
                   --><h2 class="center white-text" style="font-size: 30px;">Open till 20th July 2k18</h2>
                     <p class="center">
-                        <a href="https://goo.gl/forms/NpKr7FkYCYPA7ySL2" class="btn btn-register-hero btn-large btn-flat yellow-text">Register now</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat yellow-text">Register now</a>
                     </p>
 
                 </div>
